<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Good Feed</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_password">Password</string>
    <string name="enter_email">Email</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="title_activity_main_feed">MainFeedActivity</string>
    <string name="login_facebook">Log In With Facebook</string>
    <string name="register">Register Now</string>
    <string name="login">Log In</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="repeat_pass">Repeat Password</string>
    <string name="register_now">Register Now</string>
    <string name="logout">Log out</string>
    <string name="share">Share a Story</string>
    <string name="title_activity_share_post">SharePostActivity</string>
    <string name="title">Story Title</string>
    <string name="story">Story</string>
    <string name="cancel">Cancel</string>
    <string name="facebook_app_id">613926995394420</string>
    <string name="password_reset_prompt_message">Please enter your email address and we will send you a link to reset your password.</string>
    <string name="title_activity_user_details">User Details</string>

</resources>
