<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff0099cc">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo_view"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:layout_margin="20dp"
            android:id="@+id/login_logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textColor="#ffffffff" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_image"
        android:layout_below="@+id/logo_view">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_sm_grey_btn"
            android:text="Add Profile Image"
            android:id="@+id/add_image_button"
            android:layout_marginTop="80dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/blue_camera"
            android:id="@+id/camera_profile_image"
            android:layout_centerHorizontal="true"
            app:border_width="2dp"
            app:border_color="#FFffffff"/>


    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_image">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_name_text"
            android:hint="Name"
            android:layout_centerHorizontal="true"
            android:inputType="textCapWords|textPersonName"
            android:theme="@android:style/Theme.Holo"
            android:textColor="#ffffffff"
            android:textColorHint="#ffe9e9e9"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_email_text"
            android:hint="@string/enter_email"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/register_name_text"
            android:inputType="textEmailAddress"
            android:theme="@android:style/Theme.Holo"
            android:textColor="#ffffffff"
            android:textColorHint="#ffe9e9e9"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_pass_text"
            android:hint="@string/enter_password"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/register_email_text"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            android:theme="@android:style/Theme.Holo"
            android:textColor="#ffffffff"
            android:textColorHint="#ffe9e9e9"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_pass_two_text"
            android:hint="@string/repeat_pass"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/register_pass_text"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            android:theme="@android:style/Theme.Holo"
            android:textColor="#ffffffff"
            android:textColorHint="#ffe9e9e9"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_user_button"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:layout_below="@+id/register_pass_two_text"
            android:text="@string/register_now"
            android:background="@drawable/custom_grn_btn"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_alignBottom="@+id/register_name_text"
            android:layout_alignRight="@+id/register_name_text"
            android:layout_alignEnd="@+id/register_name_text"
            android:layout_marginRight="262dp"
            android:layout_marginEnd="262dp" />

    </RelativeLayout>



</RelativeLayout>